# DroneCMD

./: .gitignore  INSTALLATION.md  README.md  __init__.py  cli.py  constants.py  exceptions.py  py.typed  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements-sdr.txt  requirements.txt
capture/: __init__.py  detector.py  manager.py  sniffer.py
core/: __init__.py  capture.py  classification.py  demodulation.py  fhss.py  parsing.py  replay.py  signal_processing.py
injection/: __init__.py
injector/: __init__.py  obfuscation.py  suringe.py
plugins/: __init__.py  base.py  registry.py
plugins/protocols/: __init__.py  _template.py  dji.py  generic.py  parrot.py
utils/: __init__.py  compat.py  config.py  crypto.py  fileio.py  logging.py
